--- a/main.css
+++ b/main.css
@@ -179,6 +179,14 @@ table ol {
   margin-bottom: 20px 
 }
 
+
+.abstract {
+   line-height: 1;
+   margin-left: 1.0em;  
+   margin-top: 10px 
+}
+
+
 .paper p {
   margin-bottom: 2px 
 }
